# minimal-pixels

./: Cargo.toml
src/: main.rs
